# iceengine

./: .gitignore  CMakeLists.txt  bootstrap.bat  bootstrap.sh  build.sh
Assets/Fonts/: Calibri.fnt  Purisa.fnt  Verdana.fnt
Assets/ShadersGL/: AnimatedModelFragmentShader.glsl  AnimatedModelVertexShader.glsl  ModelFragmentShader.glsl  ModelVertexShader.glsl  ParticleFragmentShader.glsl  ParticleVertexShader.glsl  PathSegmentFragmentShader.glsl  PathSegmentVertexShader.glsl  ShadowFragmentShader.glsl  ShadowVertexShader.glsl  SkyboxFragmentShader.glsl  SkyboxVertexShader.glsl  SunFragmentShader.glsl  SunVertexShader.glsl  TerrainFragmentShader.glsl  TerrainHighlightFragmentShader.glsl  TerrainHighlightVertexShader.glsl  TerrainVertexShader.glsl  TexDisplayFragmentShader.glsl  TexDisplayVertexShader.glsl  TextFragmentShader.glsl  TextVertexShader.glsl  WaterFragmentShader.glsl  WaterVertexShader.glsl  WidgetFragmentShader.glsl  WidgetVertexShader.glsl
doc/: Build.txt  GUI.pages  SharedComponents.txt
doc/Blender/: Collada Exporting.xcf
doc/Devlog/: Screenshot 1.xcf
headers/: Engine.h  IceEngine.h  pch.h
headers/Algorithms/: AStar.h
headers/Animation/: Animation.h  AnimationManager.h  GravityAnimation.h  JumpAnimation.h  MoveAnimation.h
headers/Components/: AnimatedMeshComponent.h  AnimatedModelInstanceTagComponent.h  BeeComponent.h  BiomeNodeComponent.h  BlueprintComponent.h  BuildingComponent.h  CameraComponent.h  CharacterComponent.h  ComponentIds.h  ComponentManager.h  EntityHierarchyComponent.h  GraphEdgeComponent.h  GraphNodeComponent.h  InfectionComponent.h  InputReceiverComponent.h  LinkedEntitiesComponent.h  LocationComponent.h  MeshComponent.h  MeshGroupComponent.h  ModelAnimationComponent.h  ModelInstanceTagComponent.h  ModelReferenceComponent.h  ParticleSystemComponent.h  PathAnimationComponent.h  PathComponent.h  PathSegmentComponent.h  Position2dComponent.h  Position3dComponent.h  ProjectionComponent.h  RenderMaterialsComponent.h  SaveComponent.h  SharedComponent.h  SkeletonComponent.h  SkyboxComponent.h  SunComponent.h  SystemIds.h  TagComponent.h  TerrainComponent.h  (+4 more)
src/: CMakeLists.txt  Engine.cpp
src/Algorithms/: AStar.cpp
src/Animation/: Animation.cpp  AnimationManager.cpp  GravityAnimation.cpp  JumpAnimation.cpp  MoveAnimation.cpp
src/Components/: ComponentManager.cpp  MeshComponent.cpp  RenderMaterialsComponent.cpp  TerrainComponent.cpp
src/Components/Systems/: AnimatedModelManagerSystem.cpp  AnimatedModelRenderingSystem.cpp  BaseModelRenderingSystem.cpp  BeeSystem.cpp  BiomeSystem.cpp  BuildingSystem.cpp  CameraControllerSystem.cpp  CharacterSystem.cpp  DayNightCycleSystem.cpp  EventHandlingSystem.cpp  InfectionSystem.cpp  MasterRenderingSystem.cpp  MeshGroupSystem.cpp  ModelAnimationSystem.cpp  ModelManagerSystem.cpp  ObjectRenderingSystem.cpp  ParticleSystemSystem.cpp  PathAnimationSystem.cpp  PathSegmentBlueprintSystem.cpp  PathSegmentRenderingSystem.cpp  RoadNetworkSystem.cpp  SaveSystem.cpp  SceneGraphSystem.cpp  SkyboxRenderingSystem.cpp  SunRenderingSystem.cpp  TerrainRenderingSystem.cpp  TerrainSystem.cpp  ToolTipSystem.cpp  WaterRenderingSystem.cpp
src/Entities/: BaseComponentSystem.cpp  BaseEntityManager.cpp  EntityComponentBuffer.cpp  EntityManager.cpp
src/Events/: EventQueue.cpp
src/GUI/: Button.cpp  CheckBox.cpp  DropDown.cpp  ImageView.cpp  ListBox.cpp  ModelPreview.cpp  MousePicker.cpp  Padding.cpp  ProgressBar.cpp  ScrollWidget.cpp  Slider.cpp  StackPanel.cpp  TextEdit.cpp  TextLabel.cpp  Widget.cpp  WidgetManager.cpp  WidgetManager.cpp.bak  WidgetView.cpp
src/GUI/Constraints/: AlignmentConstraint.cpp  TwoPointSizeConstraint.cpp  UIConstraints.cpp
src/GUI/Fonts/: TextManager.cpp  TextStyle.cpp  Word.cpp
src/Importers/: .ModelImporterCollada.cpp.un~  ModelImporterCollada.cpp  ModelImporterCollada.cpp~  ModelImporterGlTF.cpp  ModelImporterOBJ.cpp
src/ModelAnimation/: JointTransform.cpp
src/Particles/: Particle.cpp  ParticleSystem.cpp
src/Renderer/: CubeTexture.cpp  Frustum.cpp  TextureManagerGL.cpp
src/Renderer/OpenGL/: .RenderToolsGL.cpp.un~  .TerrainRendererGL.cpp.un~  AnimatedModelRendererGL.cpp  CommonMatrixUBO_GL.cpp  FramebufferObjectGL.cpp  GraphicsSystemGL.cpp  ModelManagerGL.cpp  ModelRendererGL.cpp  OctreeDebuggerGL.cpp  ParticleRendererGL.cpp  PathSegmentRendererGL.cpp  RenderObjectGL.cpp  RenderToolsGL.cpp  RenderToolsGL.cpp~  ShadowMapRendererGL.cpp  SkyboxRendererGL.cpp  SunRendererGL.cpp  TerrainRendererGL.cpp  TerrainRendererGL.cpp~  TextRendererGL.cpp  TextureGL.cpp  UniformBufferObjectGL.cpp  VAO.cpp  VBO.cpp  VertexAttributeGL.cpp  WaterFramebuffersGL.cpp  WaterRendererGL.cpp  WidgetRendererGL.cpp
src/Renderer/PostProcessing/: PostProcessingEffectFactory.cpp  PostProcessingPipeline.cpp
src/Renderer/PostProcessing/OpenGL/: BasePostProcessorGL.cpp  ContrastChangerGL.cpp  GaussianBlurGL.cpp  OriginalCanvasGL.cpp
src/ShadersGL/: AnimatedModelShaderConfigurator.cpp  LightShaderConfigurator.cpp  ModelShaderConfigurator.cpp  ParticleShaderConfigurator.cpp  PathSegmentShaderConfigurator.cpp  Shader3dConfigurator.cpp  ShaderProgramGL.cpp  ShadowShaderConfigurator.cpp  SkyboxShaderConfigurator.cpp  SunShaderConfigurator.cpp  TerrainHighlightShaderConfigurator.cpp  TerrainShaderConfigurator.cpp  TexDisplayShaderConfigurator.cpp  TextShaderConfigurator.cpp  UIElementShaderConfigurator.cpp  WaterShaderConfigurator.cpp  WidgetShaderConfigurator.cpp
src/System/: .AABB.cpp.un~  AABB.cpp  AABB.cpp~  BaseTexture.cpp  Camera.cpp  Config.cpp  File.cpp  Finally.cpp  Image.cpp  KdTree.cpp  Light.cpp  Math.cpp  Model.cpp  ModelInstance.cpp  Path.cpp  PathSegment.cpp  Ray.cpp  RenderMaterial.cpp  Scene.cpp  Skybox.cpp  StreamTools.cpp  SystemServices.cpp  ThreadPool.cpp  Tools.cpp  Triangle.cpp  thread_pool.cpp
src/Utils/: FinalAction.cpp  SDLTools.cpp  ScopedTimeMeasurement.cpp
src/Utils/MeshGeneration/: LowPolyWaterMeshGenerator.cpp
src/World/: LowPolyTerrain.cpp  Terrain.cpp  TerrainGenerator.cpp  WaterTile.cpp  World.cpp
test/: CMakeLists.txt  test.cpp
test/System/: KdTreeTests.cpp
(+245 files in other folders)
